--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,9 @@
         width: 100%;
         height: 100%;
         display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
       }
 
       #gameBackgroundCanvas {
@@ -29,12 +32,6 @@
         z-index: -1; /* Behind the main canvas */
         object-fit: cover;
         filter: blur(15px) brightness(50%); /* Apply blur and darken the background */
-      }
-
-      #gameCanvas {
-        margin: auto;
-        position: relative;
-        z-index: 1;
       }
     </style>
   </head>
@@ -57,6 +54,7 @@
     <div id="canvasContainer" style="margin-top: 280px; margin-left: 120px;"></div> -->
     <div id="game">
       <canvas id="gameBackgroundCanvas"></canvas>
+      <canvas id="uiCanvas"></canvas>
       <canvas id="gameCanvas"></canvas>
     </div>
     <script src="bundle.js" inline></script>
