Added sfx with zzfx, added animated tiles

--- a/src/index.html
+++ b/src/index.html
@@ -56,6 +56,7 @@
       <canvas id="gameBackgroundCanvas"></canvas>
       <canvas id="uiCanvas"></canvas>
       <canvas id="gameCanvas"></canvas>
+      <button id="testSound">Test sound</button>
     </div>
     <script src="bundle.js" inline></script>
   </body>
