Updated level design to a RLE system

--- a/src/index.html
+++ b/src/index.html
@@ -41,9 +41,9 @@
         left: -5%;
         width: 110%;
         height: 110%;
-        z-index: -1; /* Behind the main canvas */
+        z-index: -1;
         object-fit: cover;
-        filter: blur(15px) brightness(50%); /* Apply blur and darken the background */
+        filter: blur(15px) brightness(50%);
       }
     </style>
   </head>
