--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,8 @@
               <option value="3">Left</option>
             </select>
           </label>
-          <button id="generateJsonButton">Generate JSON</button>
+          <button id="editorTestLevelButton">Test level</button>
+          <p id="editorMessage"></p>
         </div>
       </div>
       <canvas id="gameCanvas"></canvas>
