Added character customization screen

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,11 @@
           display: none;
         }
       }
+      body:not(.characterSelection) {
+        .-characterSelection {
+          display: none;
+        }
+      }
 
       #game {
         position: relative;
